Fixed bug #44019. This bug happened when incremental (linked) join buffers were employed to join several tables. If some fields stored in one of such incremental join buffers are used to build keys to access tables that follow the next joined table, then offsets of these fields are saved at the very end of the records stored in the join buffer. These offsets allow us to read only those record fields that are needed for building key values. Each field whose offset is saved gets its own unique number that determines the position of the offset for the field in the sequence of field offsets stored for a record. In a general case the order of the offsets in the sequence does not comply with the order of the corresponding fields. This fact was ignored by the code of the function JOIN_CACHE:: write_record_data.

Original revid:igor@mysql.com-20090404054052-zzlv2ln1dpkjdn3s